Fix bug: start.sh script overrided the java.ext.lib variant with local ones. We moved this setting into classpath.